# HuffmanEncoder

./: CMakeLists.txt  HuffmanEncoder.spec  README.md  huffmanEncoder.cpp  huffmanEncoder.hpp  main.cpp  setup.py  ui.py
huffman.egg-info/: PKG-INFO  SOURCES.txt
src/: HuffmanEncoder.py  bindings.cpp  huffmanEncoder.cpp  huffmanEncoder.hpp  main.cpp  readWriteFiles.cpp  readWriteFiles.hpp
src/file_handling/: readWriteFiles.cpp  readWriteFiles.hpp  rw_encoding.cpp  rw_encoding.hpp
src/huffman_encoder/: huffmanEncoder.cpp  huffmanEncoder.hpp
src/huffman_tree/: huffman_tree.cpp  huffman_tree.hpp
src/lz77/: lz77.cpp  lz77.hpp  lz77_tests.cpp
src/lz77/pointer/: pointer.cpp  pointer.hpp  pointer_tests.cpp
src/node/: node.cpp  node.hpp
